[package]
name = "stardew_seed_cracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
phf = "0.11"
serde = "1.0"
web-sys = { version = "0.3", features = ["console", "Navigator", "Window"] }
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.2"

[build-dependencies]
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"
serde_json = "1.0"

[profile.release]
lto = true
